--- a/.gitmodules
+++ b/.gitmodules
@@ -1,5 +1,5 @@
 [submodule "mame"]
-	path = mame
+	path = vendor/mame
 	url = https://github.com/mamedev/mame.git
 [submodule "vendor/emularity"]
 	path = vendor/emularity
