Fix up the reference to emularity vendor

--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = https://github.com/mamedev/mame.git
 [submodule "vendor/emularity"]
 	path = vendor/emularity
-	url = git@github.com:gamejolt/emularity.git
+	url = https://github.com/gamejolt/emularity.git
