--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "homepage": "https://github.com/gamejolt/retrojolt#readme",
   "devDependencies": {
-    "http-server": "^0.9.0",
-    "typescript": "^1.8.10"
+    "http-server": "0.9.0",
+    "typescript": "2.1.5"
   }
 }
